Added the Ingredient View Layer & CRUD
ABOUT: This change added the ingredient view layer to the app, and allow
users to perform CRUD operations on ingredients